--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.7.13"
+    "mongoose": "^5.7.13",
+    "node-modules": "^1.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.1"
